feat(env): Rename skaffold.env to .env

--- a/.env.example
+++ b/.env.example
@@ -65,14 +65,14 @@ GUNICORN_WORKERS=4
 # - Skaffold (for Kubernetes deployments)
 # - Docker Compose (for local development)
 #
-# 1. Copy this file: cp skaffold.env.example skaffold.env (or copy on Windows)
-# 2. Update values in skaffold.env for your environment
+# 1. Copy this file: cp .env.example .env (or copy on Windows)
+# 2. Update values in .env for your environment
 # 3. For production, change SECRET_KEY and POSTGRES_PASSWORD
 # 4. Set appropriate values for POSTGRES_HOST and REDIS_HOST:
 #    - For Docker Compose: use POSTGRES_HOST=postgres, REDIS_HOST=redis
 #    - For Kubernetes: use POSTGRES_HOST=postgresql, REDIS_HOST=redis-master
 #    - For local development: use POSTGRES_HOST=localhost, REDIS_HOST=localhost
-# 5. ALLOWED_HOSTS: For Skaffold/Helm, escape commas with backslash (e.g., localhost\,127.0.0.1\,0.0.0.0\,*)
-#    For Docker Compose only, commas can be unescaped (e.g., localhost,127.0.0.1,0.0.0.0,*)
+# 5. ALLOWED_HOSTS: Use standard comma-separated format (e.g., localhost,127.0.0.1,0.0.0.0,*)
+#    Deployment scripts automatically handle commas via generated values files
 #
 # Note: This file is used by skaffold.yaml's envTemplate configuration
