feat: add frontend Helm chart and Docker deployment
- Add complete Helm chart for frontend (easm-frontend)
  - Deployment with health checks and resource limits
  - Service (ClusterIP on port 80)
  - Ingress configuration
  - HPA for autoscaling
  - ServiceAccount

- Add Docker configurations
  - Production Dockerfile (multi-stage: Node build + Nginx)
  - Development Dockerfile.dev (hot-reload enabled)
  - Nginx configuration with API proxy and DNS resolver

- Update Skaffold configuration
  - Add frontend build artifact
  - Add frontend Helm release deployment
  - Configure port forwarding (localhost:3000)

- Update environment configuration
  - Add frontend image and version variables
  - Add frontend API URL and environment settings
  - Add MongoDB username/password variables

- Add docker-compose.dev.yml for development workflow

Fixes:
- Nginx upstream DNS resolution for Kubernetes service discovery
- Proper service naming (easm-api.easm-rnd.svc.cluster.local)

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,9 +1,10 @@
 version: "3.9"
 
+# Development docker-compose with hot-reload for frontend
 services:
   postgres:
     image: postgres:18-alpine
-    container_name: easm-postgres
+    container_name: easm-postgres-dev
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
@@ -24,7 +25,7 @@ services:
 
   redis:
     image: redis:8-alpine
-    container_name: easm-redis
+    container_name: easm-redis-dev
     ports:
       - "${REDIS_LOCAL_PORT:-6379}:6379"
     volumes:
@@ -37,7 +38,7 @@ services:
 
   mongodb:
     image: mongo:8-jammy
-    container_name: easm-mongodb
+    container_name: easm-mongodb-dev
     ports:
       - "27017:27017"
     volumes:
@@ -52,7 +53,7 @@ services:
 
   api:
     build: ./src/backend
-    container_name: easm-api
+    container_name: easm-api-dev
     command: sh /app/start-api.sh
     volumes:
       - ./src/backend:/app
@@ -79,14 +80,21 @@ services:
   frontend:
     build:
       context: ./src/frontend
-      dockerfile: Dockerfile
-    container_name: easm-frontend
+      dockerfile: Dockerfile.dev
+    container_name: easm-frontend-dev
+    volumes:
+      - ./src/frontend:/app
+      - /app/node_modules
     ports:
-      - "${FRONTEND_PORT:-80}:80"
+      - "${FRONTEND_PORT:-3000}:3000"
     depends_on:
       - api
     environment:
       - REACT_APP_API_URL=http://localhost:${API_LOCAL_PORT:-8000}
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
+    stdin_open: true
+    tty: true
     restart: unless-stopped
 
 volumes:
