--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,8 @@ REDIS_DB=0
 MONGODB_HOST=mongodb
 MONGODB_PORT=27017
 MONGODB_DB=easm_mongo
+MONGODB_USERNAME=easm_user
+MONGODB_PASSWORD=easm_password
 MONGO_LOCAL_PORT=27017
 
 # Exposed Ports Configuration (External/Local Ports Only)
@@ -34,6 +36,8 @@ API_LOCAL_PORT=8000
 POSTGRES_LOCAL_PORT=5432
 REDIS_LOCAL_PORT=6379
 MONGODB_LOCAL_PORT=27017
+FRONTEND_PORT=80
+FRONTEND_DEV_PORT=3000
 
 # JWT Settings (in minutes)
 JWT_ACCESS_TOKEN_LIFETIME=60
@@ -41,10 +45,17 @@ JWT_REFRESH_TOKEN_LIFETIME=1440
 
 # Application Version
 API_APP_VERSION=0.1.0
+FRONTEND_APP_VERSION=0.1.0
 
 # Docker Image Configuration
 API_IMAGE=easm-api
 API_IMAGE_TAG=latest
+FRONTEND_IMAGE=easm-frontend
+FRONTEND_IMAGE_TAG=latest
+
+# Frontend Configuration
+FRONTEND_API_URL=http://easm-api:8000
+FRONTEND_ENVIRONMENT=development
 
 # Kubernetes/Skaffold specific settings
 K8S_NAMESPACE=easm-rnd
