refactor: restructure frontend into multi-app architecture
- EASM-portal
- EASM-admin (admin portal, placeholder)
- EASM-ui-core shared components and utilities

--- a/src/frontend/EASM-ui-core/.gitignore
+++ b/src/frontend/EASM-ui-core/.gitignore
@@ -9,14 +9,10 @@ coverage/
 # Production
 build/
 dist/
+lib/
 
 # Misc
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Logs
 npm-debug.log*
