--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -10,7 +10,7 @@ build:
       docker:
         dockerfile: Dockerfile
     - image: easm-frontend
-      context: src/frontend
+      context: src/frontend/EASM-portal
       docker:
         dockerfile: Dockerfile
   local:
