--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       retries: 5
 
   mongodb:
-    image: mongo:8-jammy
+    image: mongo:8.0
     container_name: easm-mongodb
     ports:
       - "27017:27017"
