--- a/src/backend/docker-compose.yml
+++ b/src/backend/docker-compose.yml
@@ -34,10 +34,10 @@ services:
   api:
     build: .
     container_name: easm-api
-    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --reload
+    command: sh -c "cd easm && gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --reload"
     volumes:
       - .:/app
-      - static_volume:/app/staticfiles
+      - static_volume:/app/easm/staticfiles
     ports:
       - "8000:8000"
     env_file:
