--- a/src/backend/easm/pytest.ini
+++ b/src/backend/easm/pytest.ini
@@ -1,5 +1,5 @@
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = src.backend.easm.settings
+DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -v --tb=short --strict-markers
-testpaths = tests
+testpaths = apps
