--- a/src/frontend/EASM-portal/package.json
+++ b/src/frontend/EASM-portal/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^19.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "recharts": "^3.3.0",
     "typescript": "^4.9.5",
