feat(ci): add script build and push chart to GHCR

--- a/.env.example
+++ b/.env.example
@@ -83,6 +83,7 @@ EASM_API_ENABLED=True
 # This is the SINGLE environment file used by both:
 # - Skaffold (for Kubernetes deployments)
 # - Docker Compose (for local development)
+# - Helm chart build script (for GHCR authentication)
 #
 # 1. Copy this file: cp .env.example .env (or copy on Windows)
 # 2. Update values in .env for your environment
@@ -95,3 +96,12 @@ EASM_API_ENABLED=True
 #    Deployment scripts automatically handle commas via generated values files
 #
 # Note: This file is used by skaffold.yaml's envTemplate configuration
+
+# ===================================
+# GitHub Container Registry (GHCR) Settings
+# ===================================
+# Required for pushing Helm charts to GHCR using tools/build-chart.ps1
+# Get token from: https://github.com/settings/tokens (with packages:write scope)
+GITHUB_TOKEN=your_github_token_here
+GHCR_REGISTRY=ghcr.io
+GHCR_OWNER=SecPodVN
