--- a/src/charts/easm-api/Chart.yaml
+++ b/src/charts/easm-api/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: easm-api
 description: A Helm chart for EASM REST API
 type: application
-version: 0.1.0
+version: 1.0.0-beta.0
 appVersion: "1.0.0"
