--- a/src/charts/easm-frontend/Chart.yaml
+++ b/src/charts/easm-frontend/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: easm-frontend
 description: A Helm chart for EASM React Frontend
 type: application
-version: 0.1.0
-appVersion: "1.0"
+version: 1.0.0-beta.0
+appVersion: "1.0.0"
