--- a/src/charts/easm-web-portal/Chart.yaml
+++ b/src/charts/easm-web-portal/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: easm-frontend
+name: easm-web-portal
 description: A Helm chart for EASM React Frontend
 type: application
 version: 1.0.0-beta.0
