--- a/src/frontend/easm-react/package.json
+++ b/src/frontend/easm-react/package.json
@@ -2,6 +2,7 @@
   "name": "@easm/ui-core",
   "version": "1.0.0",
   "description": "Shared UI components and utilities for EASM applications",
+  "packageManager": "pnpm@10.23.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
