--- a/src/frontend/easm-web-portal/Dockerfile
+++ b/src/frontend/easm-web-portal/Dockerfile
@@ -3,19 +3,22 @@
 # Stage 1: Build the React app
 FROM node:18-alpine AS builder
 
+# Install pnpm
+RUN corepack enable && corepack prepare pnpm@10.23.0 --activate
+
 WORKDIR /app
 
 # Copy package files
-COPY package.json package-lock.json ./
+COPY package.json ./
 
 # Install dependencies
-RUN npm ci --legacy-peer-deps
+RUN pnpm install
 
 # Copy source code
 COPY . .
 
 # Build the app for production
-RUN npm run build
+RUN pnpm run build
 
 # Stage 2: Serve with nginx
 FROM nginx:alpine
