fix(frontend): update Dockerfiles and Vite config for Skaffold compatibility
- Change Dockerfile to copy from dist/ instead of build/ (Vite default)
- Update Dockerfile.dev to use 'pnpm run dev' instead of 'pnpm start'
- Add --host 0.0.0.0 flag for Docker container access
- Update vite.config.ts: outDir to 'dist' and add host: true
- Add .dockerignore to optimize Docker builds

--- a/src/frontend/easm-web-portal/Dockerfile.dev
+++ b/src/frontend/easm-web-portal/Dockerfile.dev
@@ -15,8 +15,8 @@ RUN pnpm install
 # Copy source code
 COPY . .
 
-# Expose port 3000
+# Expose port 3000 (Vite dev server)
 EXPOSE 3000
 
-# Start development server
-CMD ["pnpm", "start"]
+# Start Vite development server with host flag to allow external connections
+CMD ["pnpm", "run", "dev", "--host", "0.0.0.0", "--port", "3000"]
