--- a/src/frontend/easm-web-portal/Dockerfile
+++ b/src/frontend/easm-web-portal/Dockerfile
@@ -23,8 +23,8 @@ RUN pnpm run build
 # Stage 2: Serve with nginx
 FROM nginx:alpine
 
-# Copy built files from builder stage
-COPY --from=builder /app/build /usr/share/nginx/html
+# Copy built files from builder stage (Vite outputs to dist/)
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Copy custom nginx config (optional)
 COPY nginx.conf /etc/nginx/conf.d/default.conf
