--- a/src/frontend/easm-web-portal/package.json
+++ b/src/frontend/easm-web-portal/package.json
@@ -21,21 +21,14 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "recharts": "^3.3.0",
-    "web-vitals": "^5.1.0"
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/ui": "^4.0.13",
     "typescript": "^5.7.2",
-    "vite": "^6.0.3",
-    "vitest": "^4.0.13"
+    "vite": "^6.0.3"
   }
 }
