--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -9,7 +9,7 @@ build:
       context: src/backend
       docker:
         dockerfile: Dockerfile
-    - image: easm-frontend
+    - image: easm-web-portal
       context: src/frontend/easm-web-portal
       docker:
         dockerfile: Dockerfile
@@ -118,8 +118,8 @@ deploy:
           mongodb.deploy: false
         wait: false
 
-      # EASM Frontend from local Helm chart
-      - name: easm-frontend
+      # EASM Web Portal from local Helm chart
+      - name: easm-web-portal
         chartPath: src/charts/easm-web-portal
         namespace: "{{.K8S_NAMESPACE}}"
         createNamespace: true
@@ -143,7 +143,7 @@ deploy:
 # These default ports are used ONLY when running "skaffold dev" directly
 portForward:
   - resourceType: service
-    resourceName: easm-frontend-easm-web-portal
+    resourceName: easm-web-portal
     namespace: "{{.K8S_NAMESPACE}}"
     port: 80
     localPort: 3000 # Override with skaffold.ps1/sh or CLI flags
